casatables/src/glue.h

// copied from casa/Utilities/DataType.h:
/**Different data types supported by the CASA tables format.*/
typedef enum GlueDataType
{
    /**A boolean value.*/
    TpBool,
    /**A signed 8-bit integer value.*/
    TpChar,
    /**An unsigned 8-bit integer value.*/
    TpUChar,
    /**A signed 16-bit integer value.*/
    TpShort,
    /**An unsigned 16-bit integer value.*/
    TpUShort,
    /**A signed 32-bit integer value.*/
    TpInt,
    /**An unsigned 32-bit integer value.*/
    TpUInt,
    /**A 32-bit IEEE754 floating-point value.*/
    TpFloat,
    /**A 64-bit IEEE754 double-precision floating-point value.*/
    TpDouble,
    /**A complex number composed of two single-precision floating-point values.*/
    TpComplex,
    /**A complex number composed of two double-precision floating-point values.*/
    TpDComplex,
    /**A string value. **Todo:** encoding???*/
    TpString,
    /**A value that is its own CASA table.*/
    TpTable,
    /**A value that is an array of booleans.*/
    TpArrayBool,
    /**A value that is an array of signed 8-bit integers.*/
    TpArrayChar,
    /**A value that is an array of unsigned 8-bit integers.*/
    TpArrayUChar,
    /**A value that is an array of signed 16-bit integers.*/
    TpArrayShort,
    /**A value that is an array of unsigned 16-bit integers.*/
    TpArrayUShort,
    /**A value that is an array of signed 32-bit integers.*/
    TpArrayInt,
    /**A value that is an array of unsigned 32-bit integers.*/
    TpArrayUInt,
    /**A value that is an array of 32-bit single-precision floating-point numbers.*/
    TpArrayFloat,
    /**A value that is an array of 64-bit double-precision floating-point numbers.*/
    TpArrayDouble,
    /**A value that is an array of complex numbers with single-precision components.*/
    TpArrayComplex,
    /**A value that is an array of complex numbers with double-precision components.*/
    TpArrayDComplex,
    /**A value that is an array of strings. **Todo:** encoding???*/
    TpArrayString,
    /**A value that is a dictionary of name-value pairs.*/
    TpRecord,
    /**A value of some other type.*/
    TpOther,
    /**A value that is a physical quantity with associated dimensions.*/
    TpQuantity,
    /**A value that is an array of physical quantities with associated dimensions.*/
    TpArrayQuantity,
    /**A signed 64-bit integer value.*/
    TpInt64,
    /**A value that is an array of unsigned 8-bit integers.*/
    TpArrayInt64,
} GlueDataType;
typedef struct GlueTable GlueTable;
typedef struct GlueTableRow GlueTableRow;
typedef struct GlueTableDesc GlueTableDesc;
typedef struct GlueTableRecord GlueTableRecord;
// OMG, strings. First of all: casacore::String is a subclass of std::string,
// and the two are interchangeable for our purposes. I first tried to send
// std::strings directly into the Rust layer, but different versions of the
// STL have different semantics that I could never make work consistently.
// Note also that, to the best of my knowledge, there is no reliable mechanism
// to take ownership of a std::string's underlying buffer, which is what would
// be necessary for zero-copy transfer of strings from C++ to Rust. (Some STLs
// use a "small string optimization" that means that for short strings there
// *is no* underlying buffer anyway.) So we have to copy data, and often need
// to use C++->Rust callbacks to be able to copy string contents before they
// are deallocated at the C++ layer.

typedef struct StringBridge
{
    const void *data;
    unsigned long n_bytes;
} StringBridge;
typedef struct ExcInfo
{
    char message[512];
} ExcInfo;
// Generic callback prototype when handing off owned strings from C++ to Rust.
// See, e.g., table_get_column_names.
typedef void (*StringBridgeCallback)(const StringBridge *name, void *ctxt);
// A more specific callback type for table_get_keyword_info, in which there is
// additional information we'd like to to transfer.
typedef void (*KeywordInfoCallback)(const StringBridge *name, GlueDataType dtype, void *ctxt);
typedef void (*KeywordReprCallback)(const StringBridge *name, GlueDataType dtype, const StringBridge *repr, void *ctxt);
/** Tiled Storage Manager Option

See: casatables_impl/casacore/tables/DataMan/TSMOption.h
*/
typedef enum TSMOption
{
    /**Use unbuffered file IO with internal TSM caching*/
    TSM_CACHE,
    /**Use memory-mapped IO*/
    TSM_MMAP,
    /**Use buffered file IO*/
    TSM_BUFFER,
    /**MMap for existing files on 64-bit systems, otherwise Buffer*/
    TSM_DEFAULT,
    /**Use the option as defined in the aipsrc file*/
    TSM_AIPSRC,
} TSMOption;
typedef enum TableOpenMode
{
    TOM_OPEN_READONLY = 1,
    TOM_OPEN_RW = 2,
    TOM_CREATE = 3,
} TableOpenMode;
typedef enum TableCreateMode
{
    // create table
    TCM_NEW = 1,
    // create table (may not exist)
    TCM_NEW_NO_REPLACE = 2,
    // New table, which gets marked for delete"
    TCM_SCRATCH = 3,
} TableCreateMode;
/**Modes for creating a CASA table description.

see: casatables_impl/casacore/tables/Tables/TableDesc.h

additional options which could be enabled if needed:
<ul>
  <li> Old
    Open an existing table description file as readonly.
  <li> Update
    Open an existing table description file as read/write
    The TableDesc destructor will rewrite the possibly changed
    description.
  <li> Delete
    Delete the table description file. This gets done by the destructor.
</ul>

Limited subset of GlueTableDesc::TDOption to avoid
*/
typedef enum TableDescCreateMode
{
    // NB: bindgenc can't handle multiline docstrings here.
    /** Create a new table description file.*/
    // "The TableDesc destructor will write the table description into the file."
    TDM_NEW,

    /** Create a new file, raising an error if it already exists.*/
    TDM_NEW_NO_REPLACE,

    /** Create a table description without an associated file on disk.*/
    // "The table description will be lost when the TableDesc object is
    // destructed. This is useful to create a Table object without storing the
    // description separately. Note that the Table object maintains its own
    // description (i.e. it copies the description when being constructed)."
    TDM_SCRATCH,

} TableDescOption;
    int data_type_get_element_size(const GlueDataType ty);
    // Table Records

    GlueTableRecord *tablerec_create(ExcInfo &exc);
    GlueTableRecord *tablerec_copy(const GlueTableRecord &other, ExcInfo &exc);
    bool tablerec_eq(const GlueTableRecord &rec, const GlueTableRecord &other);
    int tablerec_get_keyword_info(
        const GlueTableRecord &rec,
        KeywordInfoCallback callback,
        void *ctxt,
        ExcInfo &exc);
    int
    tablerec_get_keyword_repr(
        const GlueTableRecord &rec,
        KeywordReprCallback callback,
        void *ctxt,
        ExcInfo &exc
    );
    int tablerec_get_field_info(
        const GlueTableRecord &rec,
        const StringBridge &col_name,
        GlueDataType *data_type,
        int *n_dim,
        unsigned long dims[8],
        ExcInfo &exc);
    int tablerec_get_field(
        const GlueTableRecord &rec,
        const StringBridge &field_name,
        void *data,
        ExcInfo &exc);
    int tablerec_get_field_string(
        const GlueTableRecord &rec,
        const StringBridge &col_name,
        StringBridgeCallback callback,
        void *ctxt,
        ExcInfo &exc);
    int tablerec_get_field_string_array(
        const GlueTableRecord &rec,
        const StringBridge &col_name,
        StringBridgeCallback callback,
        void *ctxt,
        ExcInfo &exc);
    int tablerec_get_field_subrecord(
        const GlueTableRecord &rec,
        const StringBridge &col_name,
        GlueTableRecord &sub_rec,
        ExcInfo &exc);
    int tablerec_put_field(
        GlueTableRecord &rec,
        const StringBridge &field_name,
        const GlueDataType data_type,
        const unsigned long n_dims,
        const unsigned long *dims,
        void *data,
        ExcInfo &exc);
    int tablerec_free(GlueTableRecord *rec, ExcInfo &exc);
    // Table Description

    GlueTableDesc *tabledesc_create(
        const StringBridge &type,
        const TableDescCreateMode mode,
        ExcInfo &exc);
    int tabledesc_add_scalar_column(
        GlueTableDesc &table_desc,
        GlueDataType data_type,
        const StringBridge &col_name,
        const StringBridge &comment,
        bool direct,
        bool undefined,
        ExcInfo &exc);
    int tabledesc_add_array_column(
        GlueTableDesc &table_desc,
        GlueDataType data_type,
        const StringBridge &col_name,
        const StringBridge &comment,
        bool direct,
        bool undefined,
        ExcInfo &exc);
    int tabledesc_add_fixed_array_column(
        GlueTableDesc &table_desc,
        GlueDataType data_type,
        const StringBridge &col_name,
        const StringBridge &comment,
        const unsigned long n_dims,
        const unsigned long *dims,
        bool direct,
        bool undefined,
        ExcInfo &exc);
    int tabledesc_set_ndims(
        GlueTableDesc &table_desc,
        const StringBridge &col_name,
        const unsigned long n_dims,
        ExcInfo &exc);
    const GlueTableRecord * tabledesc_get_keywords(GlueTableDesc &table_desc, ExcInfo &exc);